tests/cases/compiler-development/artifact/ok/token-dump-crlf-string-continuation-template.ari
fn main() -> i64 {
  let text = "left\
right";
  return 0;
}
