tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari
fn needs_both(left: ref mut i64, right: ref i64) -> i64 {
  return 0;
}

fn main() -> i64 {
  var value = 1;
  return needs_both(ref mut value, ref value);
}
